04. Apr. 2012 - amo -  fixed bug with reassignment of components in perspective when switching between perspectives
02. Apr. 2012 - amo -  updated to version number 1.05
02. Apr. 2012 - amo -  renamed all *.javafx2.* packages to *.javafx.*
01. Apr. 2012 - amo -  AFXComponent, AStatefulCallbackComponent and AStatelessCompnent extending AFXSubComponent
01. Apr. 2012 - amo -  AFXSubComponent added, the basic abstract component
01. Apr. 2012 - amo -  AStateLessCallbackComponent renamed to AStatelessCallbackComponent
01. Apr. 2012 - amo -  AFX2Component renamed to AFXComponent
01. Apr. 2012 - amo -  AFXSubcomponent added, ACallbackComponent renamed to AStatefulCallbackComponent
13. Mar. 2012 - amo -  reduce insance count in stateless components to avoid system overload
10. Mar. 2012 - psy -  fixed missing content if no toolbars were defined 
07. Mar. 2012 - amo -  fixed bug where a message to a component right after / while initialization can be dropped because it is added to queue and the initWorker won't receive messages from queue 
07. Mar. 2012 - amo -  version 1.1 started
06. Feb. 2012 - amo -  update copyright
06. Feb. 2012 - amo -  changes in AFX2Component due to API changes in IComponent
02. Feb. 2012 - amo -  moved StateLessComponentRunWorker from inner class to class, cleanup
14. Dez. 2011 - amo -  implement getActionListener() to AFX2Workbench to allow workbench to send messages
08. Dez. 2011 - amo -  changed dependencies between statelesscallback component and scheduler to remove circular dependency
08. Dez. 2011 - amo -  finished refractoring to replace componentHandler methods with methods in workbench and perspective, goal was to remove circular dependency; restructured workbench and perspective initialization 